--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/cli": "^4.0.6",
     "@tailwindcss/vite": "^4.0.6",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cra-template": "1.2.0",
